syntax = "proto3";

package proxy_test;

option go_package = "github.com/lightninglabs/aperture/proxy/testdata/proxy_test";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc SayHelloNoAuth (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
    bool return_error = 2;
}

message HelloReply {
    string message = 1;
}
